# geo-polygons

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: master.yml
countries/: BA.geojson
nginx/: geo-polygons.conf
polygons/HQ/countries/: AB.geojson  AE.geojson  AM.geojson  AT.geojson  AZ.geojson  BA.geojson  BG.geojson  BY.geojson  CZ.geojson  EE.geojson  FI.geojson  GE.geojson  GR.geojson  HR.geojson  HU.geojson  ID.geojson  IT.geojson  JP.geojson  KG.geojson  KH.geojson  KZ.geojson  LT.geojson  LV.geojson  MD.geojson  MY.geojson  OS.geojson  PL.geojson  RO.geojson  RS.geojson  RU.geojson  SI.geojson  SK.geojson  TH.geojson  TJ.geojson  TR.geojson  UA.geojson  VN.geojson
polygons/LQ/countries/: AB.geojson  AD.geojson  AE.geojson  AF.geojson  (+243 more)
regions/RU/: AMU.geojson  ARK.geojson  AST.geojson  BU.geojson  CE.geojson  CHE.geojson  CU.geojson  DA.geojson  DNR.geojson  IN.geojson  IRK.geojson  IVA.geojson  KAM.geojson  KDA.geojson  KGD.geojson  KGN.geojson  KHA.geojson  KHE.geojson  KHM.geojson  KIR.geojson  KK.geojson  KL.geojson  KLU.geojson  KO.geojson  KOS.geojson  KR.geojson  KRY.geojson  KYA.geojson  LEN.geojson  MAG.geojson  MOS.geojson  MOW.geojson  NEN.geojson  NGR.geojson  NIZ.geojson  ORE.geojson  PER.geojson  PNZ.geojson  PSK.geojson  ROS.geojson  (+16 more)
src/: docker-compose.yml  hello.py  main.py  pyproject.toml
src/api/: city_district.py  country.py  region.py
src/core/: config.py
src/infrastructure/: file_loader.py
src/services/: city_district_service.py  country_service.py  region_service.py
(+1245 files in other folders)
