[tool.poetry]
name = "geo-polygons"
version = "0.1.0"
description = ""
authors = ["Shecspi <shecspi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.1.1"
gunicorn = "^23.0.0"
fastapi = "^0.115.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
