[tool.poetry]
name = "geo-polygons"
version = "0.1.0"
description = ""
authors = ["Shecspi <shecspi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
fastapi = "^0.115.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
ruff = "^0.7.0"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
